# rusty_whisper

./: .gitignore  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  RELEASE_NOTES.md  gap-analysis.md
.cargo/: config.toml
.github/workflows/: ci.yml
demo/: README.md  app.js  index.html
examples/: profile.rs
samples/: README.md
src/: audio.rs  decoder.rs  dtw.rs  encoder.rs  gguf.rs  grammar.rs  http.rs  json.rs  lib.rs  llm_client.rs  log.rs  main.rs  mic.rs  model.rs  output.rs  quant.rs  server.rs  tensor.rs  timing.rs  tokenizer.rs  transcribe.rs  vad.rs  wasm.rs  wav.rs
