[package]
name = "rusty-whisper"
version = "0.8.0"
edition = "2021"
description = "A pure-Rust port of whisper.cpp (OpenAI Whisper speech recognition)"
license = "MIT"

[lib]
# cdylib for the wasm32-unknown-unknown browser build (demo/), rlib for
# the normal binary and tests.
crate-type = ["cdylib", "rlib"]

[features]
# GGUF container support (read models + convert .bin -> .gguf). Off by
# default: whisper.cpp has no official whisper-GGUF schema yet, so the
# metadata mapping is ours (documented in src/gguf.rs).
gguf = []

[dependencies]

[profile.release]
lto = true
codegen-units = 1
