[package]
name = "rusty-whisper"
version = "0.8.0"
edition = "2021"
description = "A pure-Rust port of whisper.cpp (OpenAI Whisper speech recognition)"
license = "MIT"

# The library is a normal rlib. The browser demo needs a `cdylib` for
# wasm32-unknown-unknown, but declaring it here would force a cdylib on
# every native build too — a wasted artifact, and on Windows/MSVC a
# `.pdb` filename collision with the binary. Instead the demo builds the
# cdylib on demand:
#   cargo rustc --lib --release --target wasm32-unknown-unknown --crate-type cdylib

[features]
# GGUF container support (read models + convert .bin -> .gguf). Off by
# default: whisper.cpp has no official whisper-GGUF schema yet, so the
# metadata mapping is ours (documented in src/gguf.rs).
gguf = []
# Native microphone capture via `cpal` (examples/stream, examples/command
# in whisper.cpp use SDL2 for this). Off by default: this is the crate's
# only crates.io dependency, and most of rusty-whisper (file/stdin
# transcription, the HTTP server) has no need for it.
mic = ["dep:cpal"]

[dependencies]
cpal = { version = "0.15", optional = true }

# Explicit so it doesn't build (and doesn't need cpal/libasound2-dev) as
# part of the default `cargo build`/`test --all-targets` — only under
# `--features mic`. Autodiscovery still covers the other src/bin/*.rs
# binaries.
[[bin]]
name = "whisper-stream"
path = "src/bin/whisper-stream.rs"
required-features = ["mic"]

[[bin]]
name = "whisper-command"
path = "src/bin/whisper-command.rs"
required-features = ["mic"]

[[bin]]
name = "whisper-talk-llama"
path = "src/bin/whisper-talk-llama.rs"
required-features = ["mic"]

[profile.release]
lto = true
codegen-units = 1
